Tue Jul 24 20:03:24 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * bin/tao_orb_tests.lst:
          Adding regression test for Bug 3000 to autorun list.

Tue Jul 24 15:15:43 UTC 2007  Vadym Ridosh  <vridosh@prismtech.com>

        * THANKS: Added Daniel de Angelis Cordeiro to the Hall of Fame.

Tue Jul 24 06:58:23 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
        * bin/tao_other_tests.lst:
          Moved all POA examples to the orb tests, core builds should also
          test the POA in detail.

Mon Jul 23 20:16:23 UTC 2007  Steve Huston  <shuston@riverace.com>

        * tests/Multicast_Test_IPV6.cpp: Always enable IPV6_MULTICAST_LOOP
          since the test relies on seeing the datagrams sent on the local
          host and various platforms have different defaults.
          ACE_SOCK_Dgram_Mcast documents this indeterminate state, so if
          the app cares (as this one does), it should set it specifically.

Mon Jul 22 09:59:30 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/unload_libace.mpb:
          Also define _CRT_SECURE_NO_WARNINGS with nmake

Mon Jul 22 09:58:30 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-msvc.h:
          Intel C++ does mimic MSVC but does have different warning
          numbers. Disable some Intel C++ warnings

Mon Jul 22 08:04:30 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Rtems_init.c:
        * ace/Atomic_Op_Sparc.c:
          With Intel C++ don't define the static variable, result in a
          warning that it is not used

Mon Jul 22 06:34:30 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/CDR_Stream.{h,cpp,inl}:
          Changed wchar_maxbytes_ to a size_t to resolve warnings with BCB2007
          and removed the return value of get_version/set_version, they just
          always do a return 0 which isn't usefull

        * ace/SPIPE_Stream.inl: